--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,11 @@
     "target": "ES2020",
     "sourceMap": true,
     "outDir": "dist",
+    "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
     "strict": false
   },
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
