--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend minimal para la app Expenso migrado a NestJS (file-based storage)",
   "main": "dist/main.js",
   "scripts": {
-    "start": "node dist/main.js",
+    "start": "npm run build && node dist/main.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "tsc -p tsconfig.build.json",
     "lint": "echo \"No lint configured\""
